<resources>
    <string name="app_name">CodingAssignment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f_name">First name:</string>
    <string name="l_name">Last name:</string>
    <string name="age">Age:</string>
    <string name="select_day">Day</string>
    <string name="select_month">Month</string>
    <string name="select_year">Year</string>
    <string name="select_dob">Select Date of birth</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
</resources>