<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FirstFragment">


   <LinearLayout
       android:id="@+id/ll_content_parent"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="76dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:orientation="vertical"
       android:layout_marginLeft="16dp"
      >
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_firstName"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_name" />
       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/tv_lastName"
           style="@style/text_style"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/l_name" />
       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/tv_select_dob"
           style="@style/text_style"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/select_dob"
          android:layout_marginTop="16dp"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"


           android:layout_marginRight="10dp">
           <androidx.appcompat.widget.AppCompatTextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/select_day"/>
      <androidx.appcompat.widget.AppCompatSpinner
          android:id="@+id/spinner_day"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         />
           <androidx.appcompat.widget.AppCompatTextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/select_month"/>
           <androidx.appcompat.widget.AppCompatSpinner
               android:id="@+id/spinner_month"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <androidx.appcompat.widget.AppCompatTextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/select_year"/>
           <androidx.appcompat.widget.AppCompatSpinner
               android:id="@+id/spinner_year"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
       </LinearLayout>
   </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_content_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/next"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>